@@ -4,7 +4,9 @@ import com.loopone.loopinbe.domain.account.auth.currentUser.CurrentUserDto;
 import com.loopone.loopinbe.domain.account.member.entity.Member;
 import com.loopone.loopinbe.domain.account.member.repository.MemberRepository;
 import com.loopone.loopinbe.domain.chat.chatRoom.service.ChatRoomService;
+
 import com.loopone.loopinbe.domain.team.team.dto.req.TeamCreateRequest;
+import com.loopone.loopinbe.domain.team.team.dto.req.TeamInvitationCreateRequest;
 import com.loopone.loopinbe.domain.team.team.dto.req.TeamOrderUpdateRequest;
 import com.loopone.loopinbe.domain.team.team.dto.res.MyTeamResponse;
 import com.loopone.loopinbe.domain.team.team.dto.res.RecruitingTeamResponse;
@@ -12,29 +14,32 @@ import com.loopone.loopinbe.domain.team.team.dto.res.TeamDetailResponse;
 import com.loopone.loopinbe.domain.team.team.dto.res.TeamMemberResponse;
 import com.loopone.loopinbe.domain.team.team.entity.Team;
 import com.loopone.loopinbe.domain.team.team.entity.TeamMember;
+import com.loopone.loopinbe.domain.team.team.entity.TeamPage;
 import com.loopone.loopinbe.domain.team.team.mapper.TeamMapper;
 import com.loopone.loopinbe.domain.team.team.repository.TeamMemberRepository;
 import com.loopone.loopinbe.domain.team.team.repository.TeamRepository;
+import com.loopone.loopinbe.domain.team.team.service.TeamInvitationService;
 import com.loopone.loopinbe.domain.team.team.service.TeamService;
 import com.loopone.loopinbe.domain.team.teamLoop.entity.TeamLoop;
-import com.loopone.loopinbe.domain.team.teamLoop.entity.TeamLoopMemberCheck;
-import com.loopone.loopinbe.domain.team.teamLoop.entity.TeamLoopMemberProgress;
-import com.loopone.loopinbe.domain.team.teamLoop.repository.TeamLoopChecklistRepository;
+
 import com.loopone.loopinbe.domain.team.teamLoop.repository.TeamLoopMemberCheckRepository;
 import com.loopone.loopinbe.domain.team.teamLoop.repository.TeamLoopMemberProgressRepository;
 import com.loopone.loopinbe.domain.team.teamLoop.repository.TeamLoopRepository;
 import com.loopone.loopinbe.domain.team.teamLoop.service.TeamLoopService;
+import com.loopone.loopinbe.global.common.response.PageResponse;
 import com.loopone.loopinbe.global.exception.ReturnCode;
 import com.loopone.loopinbe.global.exception.ServiceException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
+
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -48,25 +53,26 @@ public class TeamServiceImpl implements TeamService {
     private final MemberRepository memberRepository;
     private final TeamMapper teamMapper;
     private final TeamLoopRepository teamLoopRepository;
+    private final TeamLoopMemberProgressRepository teamLoopMemberProgressRepository;
+    private final TeamLoopMemberCheckRepository teamLoopMemberCheckRepository;
     private final TeamLoopService teamLoopService;
     private final ChatRoomService chatRoomService;
+    private final TeamInvitationService teamInvitationService;
 
     @Override
     @Transactional
     public Long createTeam(TeamCreateRequest request, CurrentUserDto currentUser) {
         Member leader = getMemberOrThrow(currentUser.id());
 
-        //팀 엔티티 생성 및 저장
+        // 팀 엔티티 생성 및 저장
         Team team = saveTeam(request, leader);
 
-        //팀장을 팀원으로 등록
+        // 팀장을 팀원으로 등록
         saveLeaderAsMember(team, leader);
+        chatRoomService.createTeamChatRoom(currentUser.id(), team);
 
-        //초대된 멤버들 등록
-        List<Member> members = inviteMembers(team, request.invitedNicknames());
-
-        chatRoomService.createTeamChatRoom(currentUser.id(), team, members);
-
+        // 팀원 초대
+        sendInvitationsByNicknames(team, request.invitedNicknames(), currentUser);
         return team.getId();
     }
 
@@ -74,52 +80,49 @@ public class TeamServiceImpl implements TeamService {
     public List<MyTeamResponse> getMyTeams(CurrentUserDto currentUser) {
         Member member = getMemberOrThrow(currentUser.id());
 
-        //내가 속한 팀들과의 연결 정보 조회 (sortOrder 우선, null이면 createdAt DESC)
+        // 내가 속한 팀들과의 연결 정보 조회 (sortOrder 우선, null이면 createdAt DESC)
         List<TeamMember> myTeamMembers = teamMemberRepository.findAllByMemberOrderBySortOrder(member);
 
-        //DTO 변환
+        // DTO 변환
         return myTeamMembers.stream()
                 .map(teamMapper::toMyTeamResponse)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<RecruitingTeamResponse> getRecruitingTeams(CurrentUserDto currentUser) {
-        //모든 팀 조회
-        List<Team> allTeams = teamRepository.findAll();
-
-        //내가 이미 속한 팀 ID 목록 조회
+    public PageResponse<RecruitingTeamResponse> getRecruitingTeams(Pageable pageable, CurrentUserDto currentUser) {
+        checkPageSize(pageable.getPageSize());
+        // 모든 팀 조회
         List<Long> myTeamIds = getMyTeamIds(currentUser.id());
+        Page<Team> page = myTeamIds.isEmpty()
+                ? teamRepository.findAll(pageable)
+                : teamRepository.findByIdNotIn(myTeamIds, pageable);
 
-        //내가 속하지 않은 팀만 필터링하여 반환
-        return allTeams.stream()
-                .filter(team -> !myTeamIds.contains(team.getId()))
-                .map(teamMapper::toRecruitingTeamResponse)
-                .collect(Collectors.toList());
+        return PageResponse.of(page.map(teamMapper::toRecruitingTeamResponse)); // 또는 PageResponse.from(page.map(...))
     }
 
     @Override
     public TeamDetailResponse getTeamDetails(Long teamId, LocalDate targetDate, CurrentUserDto currentUser) {
         Team team = getTeamOrThrow(teamId);
 
-        //해당 날짜의 팀 전체 루프 조회
+        // 해당 날짜의 팀 전체 루프 조회
         List<TeamLoop> todayLoops = teamLoopRepository.findByTeamAndLoopDate(team, targetDate);
 
-        //팀 루프 통계 계산
+        // 팀 루프 통계 계산
         int totalLoopCount = todayLoops.size();
-        double teamTotalProgress = todayLoops.isEmpty() ? 0.0 :
-                todayLoops.stream()
+        double teamTotalProgress = todayLoops.isEmpty() ? 0.0
+                : todayLoops.stream()
                         .mapToDouble(TeamLoop::calculateTeamProgress)
                         .average().orElse(0.0);
 
-        //내 루프 통계 계산
+        // 내 루프 통계 계산
         Long myId = currentUser.id();
         List<TeamLoop> myTeamLoops = todayLoops.stream()
                 .filter(loop -> loop.isParticipating(myId))
                 .toList();
         int myTeamLoopCount = myTeamLoops.size();
-        double myTotalProgress = myTeamLoops.isEmpty() ? 0.0 :
-                myTeamLoops.stream()
+        double myTotalProgress = myTeamLoops.isEmpty() ? 0.0
+                : myTeamLoops.stream()
                         .mapToDouble(loop -> loop.calculatePersonalProgress(myId))
                         .average().orElse(0.0);
 
@@ -130,6 +133,8 @@ public class TeamServiceImpl implements TeamService {
                 .goal(team.getGoal())
                 .category(team.getCategory())
                 .leaderId(team.getLeader().getId())
+                .createdAt(team.getCreatedAt())
+                .visibility(team.getVisibility())
                 .totalLoopCount(totalLoopCount)
                 .teamTotalProgress(teamTotalProgress)
                 .myLoopCount(myTeamLoopCount)
@@ -150,7 +155,7 @@ public class TeamServiceImpl implements TeamService {
                 .collect(Collectors.toList());
     }
 
-    //팀 순서 변경
+    // 팀 순서 변경
     @Override
     @Transactional
     public void updateTeamOrder(TeamOrderUpdateRequest request, CurrentUserDto currentUser) {
@@ -193,41 +198,54 @@ public class TeamServiceImpl implements TeamService {
     @Override
     @Transactional
     public void deleteMyTeams(Member member) {
+        Long memberId = member.getId();
+        // 1) 내가 가입된 팀
         List<TeamMember> myMemberships = teamMemberRepository.findAllByMember(member);
-        if (myMemberships.isEmpty()) return;
         List<Long> myTeamIds = myMemberships.stream()
                 .map(tm -> tm.getTeam().getId())
                 .distinct()
                 .toList();
-        // 내가 리더인 팀들 중, (다른 팀원이 없어서) 팀 자체를 삭제해야 하는 팀들
-        List<Team> myLeaderTeams = teamRepository.findAllByLeaderId(member.getId());
+        // 2) 내가 리더인 팀 (멤버십에 없어도 반드시 처리해야 함)
+        List<Team> myLeaderTeams = teamRepository.findAllByLeaderId(memberId);
+        List<Long> leaderTeamIds = myLeaderTeams.stream()
+                .map(Team::getId)
+                .distinct()
+                .toList();
+        // 3) 내가 연관된 모든 팀 = (가입한 팀 ∪ 리더인 팀)
+        List<Long> allRelatedTeamIds = new ArrayList<>();
+        allRelatedTeamIds.addAll(myTeamIds);
+        allRelatedTeamIds.addAll(leaderTeamIds);
+        allRelatedTeamIds = allRelatedTeamIds.stream().distinct().toList();
+        if (allRelatedTeamIds.isEmpty())
+            return;
+        // 4) 리더 팀 처리: 위임 or 팀 삭제
         List<Long> teamsToDelete = new ArrayList<>();
         for (Team team : myLeaderTeams) {
-            if (!myTeamIds.contains(team.getId())) continue;
-            teamMemberRepository.findFirstMemberByTeamIdAndMemberIdNot(team.getId(), member.getId())
+            // 리더 팀이면 무조건 처리(기존의 myTeamIds.contains(...) 조건 제거)
+            teamMemberRepository.findFirstByTeam_IdAndMember_IdNotOrderByIdAsc(team.getId(), memberId)
+                    .map(TeamMember::getMember)
                     .ifPresentOrElse(
                             nextLeader -> {
-                                team.setLeader(nextLeader); // 1) 팀 리더 위임
-                                // 2) TeamLoop에 연결된 LoopRule의 member도 새 리더로 위임
-                                teamLoopService.transferTeamLoopRuleOwner(team.getId(), member.getId(), nextLeader);
+                                team.setLeader(nextLeader);
+                                teamRepository.save(team); // 명시적으로 저장
+                                teamLoopService.transferTeamLoopRuleOwner(team.getId(), memberId, nextLeader);
                             },
-                            () -> teamsToDelete.add(team.getId())
-                    );
+                            () -> teamsToDelete.add(team.getId()));
         }
-        // 팀은 남고, 나는 탈퇴만 하는 팀들
-        List<Long> remainingTeamIds = myTeamIds.stream()
+        // 5) 팀은 남고 나는 나가기만 하는 팀들
+        List<Long> remainingTeamIds = allRelatedTeamIds.stream()
                 .filter(id -> !teamsToDelete.contains(id))
                 .toList();
-        // 루프 관련 삭제는 TeamLoopService가 담당
-        teamLoopService.deleteMyTeamLoops(member.getId(), teamsToDelete, remainingTeamIds);
-        // (A) 팀 전체 삭제: TeamMember + Team만 삭제 (루프쪽은 이미 위에서 삭제됨)
+        // 6) 루프 관련 삭제
+        teamLoopService.deleteMyTeamLoops(memberId, teamsToDelete, remainingTeamIds);
+        // 7) (A) 팀 전체 삭제
         if (!teamsToDelete.isEmpty()) {
             teamMemberRepository.deleteByTeamIds(teamsToDelete);
             teamRepository.deleteAllByIdInBatch(teamsToDelete);
         }
-        // (B) 팀은 남음: TeamMember만 삭제(탈퇴)
+        // 8) (B) 팀은 남음: 내 TeamMember만 삭제(탈퇴)
         if (!remainingTeamIds.isEmpty()) {
-            teamMemberRepository.deleteByMemberAndTeamIds(member.getId(), remainingTeamIds);
+            teamMemberRepository.deleteByMemberAndTeamIds(memberId, remainingTeamIds);
         }
     }
 
@@ -247,6 +265,67 @@ public class TeamServiceImpl implements TeamService {
 
         // 팀 삭제
         teamRepository.delete(team);
+    }
+
+    @Override
+    @Transactional
+    public void leaveTeam(Long teamId, CurrentUserDto currentUser) {
+        Team team = getTeamOrThrow(teamId);
+
+        // 팀원 여부 검증
+        validateTeamMember(teamId, currentUser.id());
+
+        // 리더인 경우 나가기 불가
+        if (team.getLeader().getId().equals(currentUser.id())) {
+            throw new ServiceException(ReturnCode.TEAM_LEADER_CANNOT_LEAVE);
+        }
+
+        TeamMember teamMember = teamMemberRepository.findByTeamIdAndMemberId(teamId, currentUser.id())
+                .orElseThrow(() -> new ServiceException(ReturnCode.USER_NOT_IN_TEAM));
+
+        // 팀 루프 체크리스트 완료 내역 삭제
+        teamLoopMemberCheckRepository.deleteByMemberAndTeamIds(currentUser.id(), List.of(teamId));
+
+        // 팀 루프 참여 내역 삭제
+        teamLoopMemberProgressRepository.deleteByMemberAndTeamIds(currentUser.id(), List.of(teamId));
+
+        // 팀 채팅방 나가기
+        chatRoomService.leaveTeamChatRoom(currentUser.id(), teamId);
+
+        // 팀원 관계 삭제
+        teamMemberRepository.delete(teamMember);
+    }
+
+    @Override
+    @Transactional
+    public void removeMember(Long teamId, Long targetMemberId, CurrentUserDto currentUser) {
+        Team team = getTeamOrThrow(teamId);
+
+        // 팀장 권한 검증
+        if (!team.getLeader().getId().equals(currentUser.id())) {
+            throw new ServiceException(ReturnCode.UNAUTHORIZED_TEAM_LEADER_ONLY);
+        }
+
+        // 자기 자신 삭제 방지
+        if (targetMemberId.equals(currentUser.id())) {
+            throw new ServiceException(ReturnCode.CANNOT_REMOVE_SELF);
+        }
+
+        // 대상 팀원이 실제로 팀에 속해있는지 검증
+        TeamMember targetTeamMember = teamMemberRepository.findByTeamIdAndMemberId(teamId, targetMemberId)
+                .orElseThrow(() -> new ServiceException(ReturnCode.USER_NOT_IN_TEAM));
+
+        // 팀 루프 체크리스트 완료 내역 삭제
+        teamLoopMemberCheckRepository.deleteByMemberAndTeamIds(targetMemberId, List.of(teamId));
+
+        // 팀 루프 참여 내역 삭제
+        teamLoopMemberProgressRepository.deleteByMemberAndTeamIds(targetMemberId, List.of(teamId));
+
+        // 팀 채팅방에서 제거
+        chatRoomService.leaveTeamChatRoom(targetMemberId, teamId);
+
+        // 팀원 관계 삭제
+        teamMemberRepository.delete(targetTeamMember);
     }
 
     // ========== 비즈니스 로직 메서드 ==========
@@ -271,25 +350,22 @@ public class TeamServiceImpl implements TeamService {
     }
 
     // 멤버 초대 및 등록
-    private List<Member> inviteMembers(Team team, List<String> invitedNicknames) {
+    private void sendInvitationsByNicknames(Team team, List<String> invitedNicknames, CurrentUserDto currentUser) {
         if (invitedNicknames == null || invitedNicknames.isEmpty()) {
-            return null;
+            return;
         }
-
-        // 닉네임 리스트로 멤버 한 번에 조회
-        List<Member> invitedMembers = memberRepository.findAllByNicknameIn(invitedNicknames);
-
-        // TeamMember 리스트 생성
-        List<TeamMember> teamMembers = invitedMembers.stream()
-                .map(member -> TeamMember.builder()
-                        .team(team)
-                        .member(member)
-                        .build())
-                .collect(Collectors.toList());
-
-        teamMemberRepository.saveAll(teamMembers);
-
-        return invitedMembers;
+        // 닉네임으로 멤버 조회
+        List<Member> invitees = memberRepository.findAllByNicknameIn(invitedNicknames);
+        // 팀장 본인 제외 + 중복 제거 + null 방지
+        List<Long> inviteeIds = invitees.stream()
+                .map(Member::getId)
+                .filter(id -> !id.equals(currentUser.id()))
+                .distinct()
+                .toList();
+        if (inviteeIds.isEmpty()) return;
+        TeamInvitationCreateRequest invitationRequest = new TeamInvitationCreateRequest(inviteeIds);
+        // 실제 초대장 발송(= PENDING 생성 + 알림 발행)
+        teamInvitationService.sendInvitation(team.getId(), invitationRequest, currentUser);
     }
 
     // ========== 조회 메서드 ==========
@@ -306,10 +382,18 @@ public class TeamServiceImpl implements TeamService {
                 .toList();
     }
 
-    //팀 조회
+    // 팀 조회
     private Team getTeamOrThrow(Long teamId) {
         return teamRepository.findById(teamId)
                 .orElseThrow(() -> new ServiceException(ReturnCode.TEAM_NOT_FOUND));
+    }
+
+    // 요청 페이지 수 제한
+    private void checkPageSize(int pageSize) {
+        int maxPageSize = TeamPage.getMaxPageSize();
+        if (pageSize > maxPageSize) {
+            throw new ServiceException(ReturnCode.PAGE_REQUEST_FAIL);
+        }
     }
 
     // ========== 검증 메서드 ==========
